--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="cc.liyongzhi.electrocardiogram.MainActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -23,8 +24,13 @@
 
 
     <cc.liyongzhi.ecgview.ECGView
+        android:id="@+id/ecg_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></cc.liyongzhi.ecgview.ECGView>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
+    </cc.liyongzhi.ecgview.ECGView>
 
 
 <!--        <cc.liyongzhi.electrocardiogram.ElectrocardiogramView
@@ -35,4 +41,4 @@
 
 
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
